<resources>
    <string name="app_name">San Juan Islands</string>
    <string name="image_folder_name">SanJuanIslands</string>
    <string name="explore_btn_txt">EXPLORE</string>
    <string name="points_btn_txt">POINTS</string>
    <string name="rewards_btn_txt">REWARDS</string>
    <string name="redeem_rewards_btn_txt">REDEEM POINTS</string>
    <string name="your_acc_btn_txt">Your Account</string>
    <string name="about_btn_txt">About</string>
    <string name="tips_btn_txt">Tips &amp; Support</string>
    <string name="more_info_btn_txt">MORE INFO</string>
    <string name="collect_point_btn_txt">COLLECT POINTS</string>
    <string name="share_btn_txt">SHARE</string>
    <string name="home">HOME</string>
    <string name="explore">EXPLORE</string>
    <string name="achievements">ACHIEVEMENTS</string>
    <string name="map_view">MAP VIEW</string>
    <string name="points">POINTS</string>
    <string name="rewards">REWARDS</string>
    <string name="list_view">LIST VIEW</string>
    <string name="view_as_list">VIEW AS LIST</string>
    <string name="view_in_map">VIEW IN MAP</string>
    <string name="your_account">YOUR ACCOUNT</string>
    <string name="tips_support">TIPS &amp; SUPPORT</string>
    <string name="about">ABOUT</string>
    <string name="title_activity_explore">ExploreActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="main_screen_progress_text">Updating Locations..</string>
    <string name="no_internet_abt_page_text">No network connection. Enable Wi-Fi or turn on mobile data!</string>
    <!--Login-->
    <string name="login_title">Your Account</string>
    <string name="login_description">Login to your account to view your earned points,
        collect more points, redeem rewards, and update your account settings.</string>
    <string name="email_address">email address</string>
    <string name="password">password</string>
    <string name="login_btn_text">LOGIN</string>
    <string name="create_new_user_btn_text">CREATE AN ACCOUNT</string>
    <string name="forgot_pass_text">Forgot your password?</string>
    <string name="new_user_txt">NEW USER?</string>
    <string name="new_user_description">An Insider account is required to collect points and
        redeem rewards. Get started now.</string>
    <string name="no_email_message">Please enter your Email Address</string>
    <string name="valid_email_message">Please Enter a Valid Email Address</string>
    <string name="no_password_message">Please enter your password</string>
    <!--forgot Password-->
    <string name="forgot_pass_title">FORGOT YOUR PASSWORD</string>
    <string name="forgot_pass_description">Please enter the email address you registered your account with and we\'ll email you your password</string>
    <string name="submit">SUBMIT</string>
    <!--Registration-->
    <string name="registration_title">CREATE AN ACCOUNT</string>
    <string name="registration_description">Create an account by filling in the required (R) fields below.
        With an account, you can collect points whenever you visit a location listed in the app, and redeem those points at
     participating rewards locations. We use your email only for Unique ID purposes. Providing your city, state
     and country will help us to</string>
    <string name="r">R</string>
    <string name="reenter_password">re_enter password</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="phone">phone</string>
    <string name="city">city</string>
    <string name="country">country</string>
    <string name="spin_country">Country</string>
    <string name="state">state</string>
    <string name="spin_state">State</string>
    <string name="reg_no_email_message">Please enter the email Address</string>
    <string name="reg_no_pass_message">Please enter the password</string>
    <string name="reg_no_confirm_pass_message">Please re-enter the password</string>
    <string name="reg_no_first_name_message">Please enter the first name</string>
    <string name="reg_no_city_message">Please enter the city</string>
    <string name="reg_no_state_message">Please enter the State</string>
    <string name="reg_valid_email_message">Please Enter the valid email address</string>
    <string name="reg_pass_mismatch_message">These passwords doesn\'t match. Try again?</string>
    <!--User Profile-->
    <string name="logout_message">Are you sure, you want to logout?</string>
    <string name="user_profile_title">UPDATE YOUR PROFILE</string>
    <string name="logout_btn_txt">LOGOUT</string>
    <string name="profile_description">Update your account information using the form below. Please note, your account is associated to your email account, so this cannot be changed. If you have a new email address, you\’ll need to create a new account and forfeit the points you\’ve collected with the previous email account.</string>
    <string name="rewards_points_earned">Reward Points Earned:</string>
    <string name="rewards_points_redeemed">Reward Points Redeemed:</string>
    <string name="rewards_points_avail">Reward Points Available:</string>
    <string name="points_txt">points</string>
    <string name="welcome">WELCOME</string>
    <string name="update_profile_btn_txt">UPDATE PROFILE</string>
    <string name="discover_places_btn_txt">DISCOVER PLACES TO REDEEM POINTS</string>
    <string name="location_point_history_button">VIEW YOUR LOCATION POINTS HISTORY</string>
    <!--Explore List Item-->
    <string name="mile_txt">Miles</string>
    <!--Rewards List-->
    <string name="rewards_description">An Insider account is required to collect points and redeem rewards. To
    earn points while at each location, hit the \"Collect Point\" button. You can then redeem rewards
    at participating rewards locations. To get started, please Login or Create Account</string>
    <string name="rewards_description_after_login">Once you collect enough points, these points can be
    redeemed for goods or services at Rewards Locations listed below:</string>
    <!--Explore Details-->
    <string name="follow_us">Follow Us:</string>
    <string name="collect_point_alert_msg">Point collection is enabled when you are within GPS range of the location and you are connected to the internet.
        Please arrive at the location and try again.</string>
    <string name="redeem_point_alert_msg">Rewards redemption is enabled when you are within GPS range of the location and you are connected to the internet. Please arrive at the location and try again.</string>
    <!--Point History-->
    <string name="point_history_description">Each location is assigned a point value. Pushing the
    \'Collect Points\' button while physically visiting a location will add the location\'s points
     to your points total. You are able to collect a location\'s points once. To keep earning points
     explore more locations. Collecting points requires a cellular or Wi-Fi internet connection.</string>
    <string name="points_list_txt">Points</string>
    <!--Login popup-->
    <string name="login_pop_title">Authentication</string>
    <string name="login_pop_description">To collect points you need to be logged in to your insider account.
    Hitting the \"Collect Points\" button allows you to earn points associated with each location. Spend your points at
    rewards locations. Please Login or Create an Account to enable this feature.</string>
    <!--Redeem-->
    <string name="clear_txt">Clear</string>
    <string name="send_txt">Send</string>
    <string name="not_able_to_redeem">you don\’t have enough points to redeem the rewards. Please collect more points and revisit this rewards location.</string>
    <string name="code_not_accept_message">Sorry, that code was not accepted. \nPlease try again</string>
</resources>
