<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sandcastle.sanjuanislands.LoginActivity"
    tools:showIn="@layout/app_bar_login">

    <ImageView
        android:id="@+id/bg_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:fitsSystemWindows="true"
        android:scaleType="fitXY"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_with_half_trans">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="50dp"
            tools:context="com.sandcastle.sanjuanislands.LoginActivity">


            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:maxLines="1"
                android:padding="10dp"
                android:text="@string/login_title"
                android:textColor="@color/text_color"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/login_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:gravity="left"
                android:maxLines="5"
                android:padding="10dp"
                android:text="@string/login_description"
                android:textColor="@color/text_color"
                android:textSize="@dimen/description_text_size"   />

            <LinearLayout
                android:id="@+id/login_sections_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_description"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_edittext_bg"
                    android:gravity="center"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/login_edit_text_color"
                    android:textSize="@dimen/edt_txt_text_size" />

                <EditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/login_edittext_bg"
                    android:gravity="center"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/login_edit_text_color"
                    android:textSize="@dimen/edt_txt_text_size" />

                <RelativeLayout
                    android:id="@+id/Login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/home_screen_button_bg">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_centerHorizontal="true"
                        android:padding="5dp">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="fill_parent"
                            android:src="@drawable/account" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:lines="1"
                            android:text="@string/login_btn_text"
                            android:textColor="@color/text_color"
                            android:textIsSelectable="false"
                            android:textSize="@dimen/Button_text_size"
                            android:textStyle="bold" />

                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/forgot_password_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_sections_container"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:maxLines="5"
                android:padding="10dp"
                android:text="@string/forgot_pass_text"
                android:textColor="@color/text_color"
                android:textSize="@dimen/description_text_size"/>

            <TextView
                android:id="@+id/new_user_title_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forgot_password_txt"
                android:gravity="left"
                android:maxLines="1"
                android:padding="10dp"
                android:text="@string/new_user_txt"
                android:textColor="@color/text_color"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/new_user_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/new_user_title_txt"
                android:gravity="left"
                android:maxLines="5"
                android:padding="10dp"
                android:text="@string/new_user_description"
                android:textColor="@color/text_color"
                android:textSize="@dimen/description_text_size"   />

            <RelativeLayout
                android:id="@+id/create_account_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/new_user_description"
                android:layout_centerHorizontal="true"
                android:background="@drawable/home_screen_button_bg">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:padding="5dp">


                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:lines="1"
                        android:text="@string/create_new_user_btn_text"
                        android:textColor="@color/text_color"
                        android:textIsSelectable="false"
                        android:textSize="@dimen/Button_text_size"
                        android:textStyle="bold" />

                </LinearLayout>
            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
