<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/parent_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:gravity="left"
            android:maxLines="1"
            android:padding="10dp"
            android:text="@string/login_pop_title"
            android:textColor="@color/text_color"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/close_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:src="@drawable/closebtn" />

    </FrameLayout>


    <TextView
        android:id="@+id/parent_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="left"
        android:maxLines="10"
        android:padding="20dp"
        android:text="@string/login_pop_description"
        android:textColor="@color/text_color"
        android:textSize="@dimen/description_text_size" />


    <LinearLayout
        android:paddingBottom="20dp"
        android:id="@+id/child_layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/Login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/home_screen_button_bg">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:padding="5dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="fill_parent"
                    android:src="@drawable/account" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:lines="1"
                    android:text="@string/login_btn_text"
                    android:textColor="@color/text_color"
                    android:textIsSelectable="false"
                    android:textSize="@dimen/Button_text_size"
                    android:textStyle="bold" />

            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/create_account_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/home_screen_button_bg">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:padding="5dp">


                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:lines="1"
                    android:text="@string/create_new_user_btn_text"
                    android:textColor="@color/text_color"
                    android:textIsSelectable="false"
                    android:textSize="@dimen/Button_text_size"
                    android:textStyle="bold" />

            </LinearLayout>
        </RelativeLayout>


    </LinearLayout>

</LinearLayout>
